--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,19 @@
 title: Noah Flynn
 email: noahrflynn@gmail.com
 description: My personal website
-baseurl: /
-url: https://noahrflynn.com
 github_username: nrflynn2
 
 # Build Settings
 markdown: kramdown
 theme: jekyll-theme-minimal
+
+lsi: false
+safe: true
+source: [your repo's top level directory]
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
