--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # Site Settings
-title: Noah Flynn
-email: noahrflynn@gmail.com
-description: My personal website
-github_username: nrflynn2
+#title: Noah Flynn
+#email: noahrflynn@gmail.com
+#description: My personal website
+#github_username: nrflynn2
 
 # Build Settings
-markdown: kramdown
+#markdown: kramdown
 theme: jekyll-theme-minimal
 
-lsi: false
-safe: true
-source: [your repo's top level directory]
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
+#lsi: false
+#safe: true
+#source: [your repo's top level directory]
+#incremental: false
+#highlighter: rouge
+#gist:
+#  noscript: false
+#kramdown:
+#  math_engine: mathjax
+# syntax_highlighter: rouge
