--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Noah Flynn"
-  avatar           : "profile.png"
+  avatar           : "noahflynn.jpg"
   bio              : "PhD Candidate at Washington University in St. Louis"
   location         : "St. Louis, Missouri"
   employer         :
