Google scholars profile added

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "St. Louis, Missouri"
   employer         :
   pubmed           :
-  googlescholar    :
+  googlescholar    : "https://scholar.google.com/citations?user=KsUG8GgAAAAJ&hl=en"
   email            :
   researchgate     :
   uri              :
