--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Noah Flynn"
 title_separator          : "-"
-name                     : &name "Noah Flynn"
-description              : &description "PhD Candidate at Washington University in St. Louis"
+name                     : &name "Noah Flynn, PhD"
+description              : &description "Research Scientist at Amazon Alexa AI"
 url                      : https://nrflynn2.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "nrflynn2.github.io"
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Noah Flynn"
+  name             : "Noah Flynn, PhD"
   avatar           : "noahflynn.jpg"
-  bio              : "PhD Candidate at Washington University in St. Louis"
-  location         : "St. Louis, Missouri"
+  bio              : "Research Scientist at Amazon Alexa AI"
+  location         :
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=KsUG8GgAAAAJ&hl=en"
