--- a/_data/main_info.yml
+++ b/_data/main_info.yml
@@ -1,6 +1,6 @@
 name: "Noah Flynn"
 title: "Research Scientist at Amazon Alexa AI"
-email: "no"
+email: "XY [AT] wustl.edu (X=noah, Y=flynn)"
 profile_pic: "/images/noahflynn.jpg"
 linkedin: "https://www.linkedin.com/in/noaflynn"
 github: "https://github.com/nrflynn2"
