--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,9 +1,82 @@
 papers:
 
+  - title: "Message Passing Neural Networks Improve Prediction of Metabolite Authenticity"
+    authors: "<b>Noah R Flynn</b>, S Joshua Swamidass"
+    venue: "Provisionally Accepted"
+    selected: y
+
+  - title: "Discovery of Novel Reductive Elimination Pathway for 10-Hydroxywarfarin"
+    authors: "Dakota L Pouncey, Dustyn A Barnette, Riley W Sinnott, Sarah J Phillips, <b>Noah R Flynn</b>, Howard P Hendrickson, S Joshua Swamidass, Grover Paul Miller"
+    venue: "Frontiers in Pharmacology (2022)"
+    paper_pdf: "files/publications/hydroxywarfarin_2022/paper.pdf"
+    selected: n
+
+  - title: "Cal-net: Jointly learning classification and calibration on imbalanced binary classification tasks"
+    authors: "Arghya Datta, <b>Noah R Flynn</b>, S Joshua Swamidass"
+    venue: "IJCNN (2021)"
+    paper_pdf:
+    selected: y
+
   - title: "Bioactivation of Isoxazole-Containing Bromodomain and Extra-Terminal Domain (BET) Inhibitors"
-    authors: "<b>Noah Flynn</b>"
-    venue: "TesT"
+    authors: "<b>Noah Flynn</b>, Michael D. Ward, Mary A. Schleiff, Corentine M.C. Laurin, Rohit Farmer, Stuart J. Conway, Gunnar Boysen, S. J. Swamidass, Grover P. Miller"
+    venue: "Metabolites (2021)"
     paper_pdf: "/files/publications/2021_bromo/paper.pdf"
     supp_pdf: "/files/publications/2021_bromo/supp.pdf"
     selected: y
 
+  - title: "Machine Learning on Liver-Injuring Drug Interactions with NSAIDs from Hospitalization Data"
+    authors: "Arghya Datta<sup>‡</sup>, <b>Noah Flynn<sup>‡</sup></b>, Dustyn A Barnette, Keith F Woeltje, Grover P Miller, S Joshua Swamidass"
+    venue: "PLOS Computational Biology (2021)"
+    paper_pdf: "files/publications/ehr_nsaid_2021/paper.pdf"
+    selected: y
+
+  - title: "Modeling the Bioactivation and Subsequent Reactivity of Drugs"
+    authors: "Tyler B Hughes<sup>‡</sup>, <b>Noah Flynn<sup>‡</sup></b>, Na Le Dang, S Joshua Swamidass"
+    venue: "Chemical Research in Toxicology (2021)"
+    paper_pdf: "files/publications/bioact_2021/paper.pdf"
+    selected: y
+
+  - title: "Significance of Multiple Bioactivation Pathways for Meclofenamate as Revealed through Modeling and Reaction Kinetics"
+    authors: "Mary Alexandra Schleiff, <b>Noah R Flynn</b>, Sasin Payakachat, Benjamin Mark Schleiff, Anna O Pinson, Dennis W Province, S Joshua Swamidass, Gunnar Boysen, Grover P Miller"
+    venue: "Drug Metabolism and Disposition (2021)"
+    paper_pdf: "files/publications/meclofenamate_2021/paper.pdf"
+    supp_pdf: "files/publications/meclofenamate_2021/supp.pdf"
+    selected: n
+
+  - title: "Meloxicam methyl group determines enzyme specificity for thiazole bioactivation compared to sudoxicam"
+    authors: "Dustyn A Barnette, Mary A Schleiff, Arghya Datta, <b>Noah Flynn</b>, S Joshua Swamidass, Grover P Miller"
+    venue: "Toxicology Letters (2020)"
+    selected: n
+
+  - title: "The Metabolic Forest: Predicting the Diverse Structures of Drug Metabolites"
+    authors: "Tyler B Hughes, Na Le Dang, Ayush Kumar, <b>Noah R Flynn</b>, S Joshua Swamidass"
+    venue: "Journal of Chemical Information and Modeling (2020)"
+    paper_pdf:
+    supp_pdf:
+    selected: n
+
+  - title: "XenoNet: Inference and Likelihood of Intermediate Metabolite Formation"
+    authors: "<b>Noah R Flynn</b>, Na Le Dang, Michael D Ward, S Joshua Swamidass"
+    venue: "Journal of Chemical Information and Modeling (2020)"
+    paper_pdf:
+    supp_pdf: "files/publications/xenonet_2020/supp.pdf"
+    selected: y
+
+  - title: "Dual mechanisms suppress meloxicam bioactivation relative to sudoxicam"
+    authors: "Dustyn A Barnette, Mary A Schleiff, Laura R Osborn, <b>Noah Flynn</b>, Matthew Matlock, S Joshua Swamidass, Grover P Miller"
+    venue: "Toxicology (2020)"
+    paper_pdf:
+    selected: n
+
+  - title: "Comprehensive kinetic and modeling analyses revealed CYP2C9 and 3A4 determine terbinafine metabolic clearance and bioactivation"
+    authors: "Dustyn A Barnette, Mary A Davis, <b>Noah Flynn</b>, Anirudh S Pidugu, S Joshua Swamidass, Grover P Miller"
+    venue: "Biochemical Pharmacology (2019)"
+    paper_pdf:
+    selected: n
+
+  - title: "CYP2C19 and 3A4 Dominate Metabolic Clearance and Bioactivation of Terbinafine Based on Computational and Experimental Approaches"
+    authors: "Mary A Davis, Dustyn A Barnette, <b>Noah R Flynn</b>, Anirudh S Pidugu, S Joshua Swamidass, Gunnar Boysen, Grover P Miller"
+    venue: "Chemical Research in Toxicology (2019)"
+    paper_pdf:
+    supp_pdf: "files/publications/tbf_davis_2019/supp.pdf"
+    selected: n
