--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,9 @@ papers:
 
   - title: "Message Passing Neural Networks Improve Prediction of Metabolite Authenticity"
     authors: "<b>Noah R Flynn</b>, S Joshua Swamidass"
-    venue: "Provisionally Accepted"
+    venue: "Journal of Chemical Information and Modeling (2023)"
+    paper_pdf: "https://pubs.acs.org/doi/abs/10.1021/acs.jcim.2c01383"
+    supp_pdf: "files/publications/metscore_2023/supp.pdf"
     selected: y
 
   - title: "Discovery of Novel Reductive Elimination Pathway for 10-Hydroxywarfarin"
@@ -14,7 +16,6 @@ papers:
   - title: "Cal-net: Jointly learning classification and calibration on imbalanced binary classification tasks"
     authors: "Arghya Datta, <b>Noah R Flynn</b>, S Joshua Swamidass"
     venue: "IJCNN (2021)"
-    paper_pdf:
     selected: y
 
   - title: "Bioactivation of Isoxazole-Containing Bromodomain and Extra-Terminal Domain (BET) Inhibitors"
