Update CV and job experience

--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,5 +1,11 @@
 experiences:
 
+- place: "UC Berkeley"
+  time: "Jun 2024 - now"
+  title: "Adjunct Faculty"
+  subtitle: "Molecular Science & Software Engineering"
+  category: "work"
+
 - place: "Amazon"
   time: "Jun 2021 - now"
   title: "Research Scientist II"
