--- a/_data/main_info.yml
+++ b/_data/main_info.yml
@@ -1,5 +1,5 @@
 name: "Noah Flynn"
-title: "Research Scientist at Amazon Alexa AI"
+title: "Applied Scientist II at Amazon AWS AI Labs | PhD Deep Learning & Cheminformatics | Adjunct Faculty at UC Berkeley"
 email: "XY [AT] wustl.edu (X=noah, Y=flynn)"
 profile_pic: "/images/noahflynn.jpg"
 linkedin: "https://www.linkedin.com/in/noaflynn"
