Adjust image and text sizes

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -16,7 +16,7 @@ papers:
     selected: y
 
   - title: "Discovery of Novel Reductive Elimination Pathway for 10-Hydroxywarfarin"
-    authors: "Dakota L Pouncey, Dustyn A Barnette, Riley W Sinnott, Sarah J Phillips, <b>Noah R Flynn</b>, Howard P Hendrickson, S Joshua Swamidass, Grover Paul Miller"
+    authors: "Dakota L Pouncey, et al. (including <b>Noah R Flynn</b>)"
     venue: "Frontiers in Pharmacology (2022)"
     paper_pdf: "files/publications/hydroxywarfarin_2022/paper.pdf"
     teaser_image: "files/publications/hydroxywarfarin_2022/teaser.png"
