--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : "https://x.com/NoahF39228"
+  twitter          : "NoahF39228"
   vine             :
   weibo            :
   xing             :
